force-app/main/default/objects/Relief_Valve_Document__c/Relief_Valve_Document__c.object-meta.xml
<CustomObject>
    <label>Relief Valve Document</label>
    <nameField>
        <displayFormat>RVD-{0000}</displayFormat>
        <label>Relief Valve Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relief Valve Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>