force-app/main/default/objects/Relief_Valve_Document__c/fields/Model_Size__c.field-meta.xml
<CustomField>
    <fullName>Model_Size__c</fullName>
    <label>Model &amp; Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>